# orpheus

./: README.md  go.mod  go.sum  pyproject.toml
proto/: embedding.proto
services/embedding/: pyproject.toml
services/embedding/src/embedding/: main.py  server.py
services/embedding/src/embedding/stub/: embedding_pb2.py  embedding_pb2.pyi  embedding_pb2_grpc.py
services/vector-api/: go.mod
services/vector-api/cmd/api/: main.go
services/vector-api/internal/embedding/: embedding.pb.go  embedding_grpc.pb.go
services/vector-api/internal/handlers/: api.go  collections.go
services/vector-api/internal/models/: api.go
src/cmd/api/: main.go
src/internal/handlers/: api.go  entries.go
src/test_images/: sample_image_2.avif
